fix: hierarchy and whitespace

--- a/chair-shop-react/src/App.css
+++ b/chair-shop-react/src/App.css
@@ -20,6 +20,7 @@ h1, h3 {
 }
 
 h1 {
+  margin-bottom: 32px;
   font-size: 44px;
   line-height: 1.1;
   letter-spacing: -1px;
