--- a/chair-shop-react/src/hero.css
+++ b/chair-shop-react/src/hero.css
@@ -1,28 +1,28 @@
 section {
-    margin-bottom: 48px;
+    margin-bottom: 96px;
 }
 
 .hero__container {
     display: grid;
     grid-template-columns: repeat(2, 1fr);
     column-gap: 80px;
-    margin-top: 48px;
-    margin-bottom: 48px;
+    margin-top: 64px;
 }
 
 li {
     list-style: none;
     display: flex;
     align-items: center;
-    margin-bottom: 24px;
+    margin-bottom: 16px;
 }
 
 ul {
-    margin-bottom: 24px;
+    margin-bottom: 48px;
 }
 
 img {
     width: 100%;
+    border-radius: 12px;
 }
 
 .btn:link,
@@ -33,6 +33,7 @@ img {
     text-transform: uppercase;
     font-weight: 500;
     display: inline-block;
+    border-radius: 100px;
 }
 
 .btn__big {
@@ -77,10 +78,18 @@ img {
     line-height: 1.5;
 }
 
+.feature__icon {
+    color: #087f5b;
+    width: 32px;
+    height: 32px;
+    margin-bottom: 24px;
+}
+
 .testimonial__section {
     background-color: #087f5b;
-    color: #fff;
     padding: 24px;
+    color: #fff;
+    border-radius: 12px;
 }
 
 .testimonial__box {
@@ -97,10 +106,15 @@ img {
     margin-bottom: 24px;
     font-size: 18px;
     line-height: 1.5;
+    color: #e6fcf5;
+}
+
+.testimonial__author {
+    color: #c3fae8;
 }
 
 .featured__box {
-    padding: 24px;
+    padding: 32px;
 }
 
 .chair__details__box {
@@ -114,7 +128,26 @@ img {
     font-size: 20px;
 }
 
+.chair__icon {
+    color: #087f5b;
+    margin-right: 10px;
+    width: 24px;
+    height: 24px;
+}
+
+.chairs {
+    box-shadow: 0px 20px 30px 0px rgba(73, 80, 87, 0.08);
+    border-radius: 12px;
+}
+
+.chairs img {
+    border-bottom-left-radius: 0;
+    border-bottom-right-radius: 0;
+}
+
 .footer {
+    text-align: center;
+    margin: 1.5px;
     font-size: 14px;
     line-height: 1.5;
     color: #495057;
